--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"server": "json-server data.json --port 8000"
+		"server": "json-server data.json --port 8000",
+		"setup": "npm run dev & npm run server"
 	},
 	"dependencies": {
+		"@nextui-org/react": "^2.3.6",
+		"framer-motion": "^11.2.6",
 		"json-server": "^1.0.0-beta.0",
 		"next": "14.2.3",
 		"react": "^18",
